# MathAgent

./: .gitignore  README.md  screenshot1
fro/: package.json
fro/src/components/: ChatWindow.css
frontend/: package-lock.json
frontend/src/: App.js
frontend/src/components/: ChatWindow.css  ChatWindow.js  DebugChat.js
pd2/: README.md  autogen_kb.json  pyproject.toml  report.md
pd2/chroma_db/: chroma.sqlite3
pd2/knowledge/: user_preference.txt
pd2/src/pd2/: agents.yml  crew.py  main.py  tasks.yml
pd2/src/pd2/tools/: config.py  feedback.py  guardrails.py  kb_manager.py  math_agent.py  ollama_helper.py  web_retrieval.py
