[project]
name = "pd2"
version = "0.1.0"
description = "PD2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
pd2 = "pd2.main:run"
run_crew = "pd2.main:run"
train = "pd2.main:train"
replay = "pd2.main:replay"
test = "pd2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
